PR middle-end/67517 	* gimplify.c (gimplify_scan_omp_clauses): Instead of 	asserting that decl is not specified in octx->variables, 	break out of the loop if it is.
	* c-c++-common/gomp/pr67517.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227615 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/67517
+	* gimplify.c (gimplify_scan_omp_clauses): Instead of
+	asserting that decl is not specified in octx->variables,
+	break out of the loop if it is.
+
 	PR c++/67514
 	* gimplify.c (gimplify_omp_for): For loop SIMD construct, if
 	iterator is not explicitly determined, but is defined inside
