PR middle-end/67521 	* gimplify.c (gimplify_omp_for): Don't call omp_add_variable 	if decl is already in outer->variables.
	* c-c++-common/gomp/pr67521.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227616 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/67521
+	* gimplify.c (gimplify_omp_for): Don't call omp_add_variable
+	if decl is already in outer->variables.
+
 	PR middle-end/67517
 	* gimplify.c (gimplify_scan_omp_clauses): Instead of
 	asserting that decl is not specified in octx->variables,
