--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/67521
+	* c-c++-common/gomp/pr67521.c: New test.
+
 	PR middle-end/67517
 	* c-c++-common/gomp/pr67517.c: New test.
 
