PR c++/67522 	* semantics.c (handle_omp_array_sections_1): Only run 	type_dependent_expression_p on VAR_DECL/PARM_DECLs. 	(finish_omp_clauses) <case OMP_CLAUSE_LINEAR>: Likewise. 	Don't adjust OMP_CLAUSE_LINEAR_STEP if OMP_CLAUSE_DECL 	is not a VAR_DECL/PARM_DECL.
	* g++.dg/gomp/pr67522.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227617 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,12 @@
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/67522
+	* semantics.c (handle_omp_array_sections_1): Only run
+	type_dependent_expression_p on VAR_DECL/PARM_DECLs.
+	(finish_omp_clauses) <case OMP_CLAUSE_LINEAR>: Likewise.
+	Don't adjust OMP_CLAUSE_LINEAR_STEP if OMP_CLAUSE_DECL
+	is not a VAR_DECL/PARM_DECL.
+
 	PR c++/67511
 	* semantics.c (handle_omp_for_class_iterator): Don't wrap
 	error_mark_node into a NOP_EXPR to void_type_node.
