PR c++/67523 	* gimplify.c (gimplify_omp_for): If inner stmt is not found 	for combined loop, assert seen_error () and return GS_ERROR.
	* g++.dg/gomp/pr67523.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227618 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/67523
+	* gimplify.c (gimplify_omp_for): If inner stmt is not found
+	for combined loop, assert seen_error () and return GS_ERROR.
+
 	PR middle-end/67521
 	* gimplify.c (gimplify_omp_for): Don't call omp_add_variable
 	if decl is already in outer->variables.
