gcc/ 	Backport from mainline 	2015-09-10  Oleg Endo  <olegendo@gcc.gnu.org>
	PR target/67506
	* config/sh/sh.c (sh_extending_set_of_reg::use_as_extended_reg): Add
	missing simplify_gen_subreg.

gcc/testsuite/
	Backport from mainline
	PR target/67506
	* gcc.c-torture/compile/pr67506.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2015-09-10  Oleg Endo  <olegendo@gcc.gnu.org>
+
+	Backport from mainline
+	PR target/67506
+	* gcc.c-torture/compile/pr67506.c: New test.
+
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/67523
