Link gcc.dg/pie-link.c with -pie
	* gcc.dg/pie-link.c: Add -pie to dg-options.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227683 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* gcc.dg/pie-link.c: Add -pie to dg-options.
+
 2015-09-11  Alex Velenko  <Alex.Velenko@arm.com>
 
 	Backport from mainline
