* config/pa/pa.c (pa_function_ok_for_sibcall): Remove special treatment 	of TARGET_ELF32.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227934 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2015-09-19  John David Anglin  <danglin@gcc.gnu.org>
+
+	* config/pa/pa.c (pa_function_ok_for_sibcall): Remove special treatment
+	of TARGET_ELF32.
+
 2015-09-18  John David Anglin  <danglin@gcc.gnu.org>
 
 	PR middle-end/67401
