--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2015-09-21  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	Backport from mainline
+	2015-09-16  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	PR target/67573
+	* config/sh/sh.md (call_pcrel): Add early clobber to scratch
+	operand.
+	(call_value_pcrel, sibcall_pcrel, sibcall_value_pcrel): Likewise.
+
 2015-09-20  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	Backport from mainline
