2015-09-21  Richard Biener  <rguenther@suse.de>
	Backport from mainline
	2015-07-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66793
	* gimple-ssa-isolate-paths.c (insert_trap_and_remove_trailing_statemen):
	Properly split the block after stmts ending it.

	* gcc.dg/torture/pr66793.c: New testcase.

	2015-08-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67055
	* tree-ssa-ccp.c (fold_builtin_alloca_with_align): Handle
	NULL gimple_block.

	* g++.dg/torture/pr67055.C: New testcase.

	2015-08-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67121
	* tree-if-conv.c (combine_blocks): Clear range-info produced
	by stmts no longer executed conditionally.

	* gcc.dg/torture/pr67121.c: New testcase.

	2015-09-16  Richard Biener  <rguenther@suse.de>

	PR middle-end/67271
	* fold-const.c (native_encode_expr): Bail out on bogus offsets.

	* gcc.dg/pr67271.c: New testcase.

	2015-07-22  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66952
	* tree-ssa-ifcombine.c (pass_tree_ifcombine::execute): For
	blocks we end up executing unconditionally reset all SSA
	info such as range and alignment.
	* tree-ssanames.h (reset_flow_sensitive_info): Declare.
	* tree-ssanames.c (reset_flow_sensitive_info): New function.

	* gcc.dg/torture/pr66952.c: New testcase.

	2015-09-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67470
	* tree-ssa-loop-im.c (execute_sm_if_changed): Preserve PHI
	structure for PHI hoisting by inserting a forwarder block
	if appropriate.

	* gcc.dg/torture/pr67470.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227961 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,36 @@
+2015-09-21  Richard Biener  <rguenther@suse.de>
+
+	Backport from mainline
+	2015-07-08  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/66793
+	* gcc.dg/torture/pr66793.c: New testcase.
+
+	2015-08-05  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/67055
+	* g++.dg/torture/pr67055.C: New testcase.
+
+	2015-08-05  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/67121
+	* gcc.dg/torture/pr67121.c: New testcase.
+
+	2015-09-16  Richard Biener  <rguenther@suse.de>
+
+	PR middle-end/67271
+	* gcc.dg/pr67271.c: New testcase.
+
+	2015-07-22  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/66952
+	* gcc.dg/torture/pr66952.c: New testcase.
+
+	2015-09-15  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/67470
+	* gcc.dg/torture/pr67470.c: New testcase.
+
 2015-09-17  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline:
