PR middle-end/67619 	* except.c (expand_builtin_eh_return): Use copy_addr_to_reg to copy 	the address to a register.
testsuite/ChangeLog:

	PR middle-end/67619
	* gcc.dg/torture/pr67619.c: New test.
	* lib/target-supports.exp (check_effective_target_builtin_eh_return):
	New procedure.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_9-branch@227984 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2015-09-21  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR middle-end/67619
+	* except.c (expand_builtin_eh_return): Use copy_addr_to_reg to copy
+	the address to a register.
+
 2015-09-19  John David Anglin  <danglin@gcc.gnu.org>
 
 	* config/pa/pa.c (pa_function_ok_for_sibcall): Remove special treatment
