--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8477,11 +8477,11 @@
    (clobber (reg:CC FLAGS_REG))]
   "TARGET_AVX512F && reload_completed"
    [(parallel [(set (match_dup 0)
-		    (xor:HI (match_dup 0)
-			    (match_dup 1)))
+		    (xor:SWI1248x (match_dup 0)
+				  (match_dup 1)))
 	       (clobber (reg:CC FLAGS_REG))])
     (set (match_dup 0)
-	 (not:HI (match_dup 0)))])
+	 (not:SWI1248x (match_dup 0)))])
 
 ;;There are kortrest[bdq] but no intrinsics for them.
 ;;We probably don't need to implement them.
