--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8515,7 +8515,7 @@
   [(set (match_operand:HI 0 "register_operand" "=k")
 	(ior:HI
 	  (ashift:HI
-	    (match_operand:HI 1 "register_operand" "k")
+	    (zero_extend:HI (match_operand:QI 1 "register_operand" "k"))
 	    (const_int 8))
 	  (zero_extend:HI (match_operand:QI 2 "register_operand" "k"))))]
   "TARGET_AVX512F"
@@ -8528,9 +8528,9 @@
   [(set (match_operand:SI 0 "register_operand" "=k")
 	(ior:SI
 	  (ashift:SI
-	    (match_operand:SI 1 "register_operand" "k")
+	    (zero_extend:SI (match_operand:HI 1 "register_operand" "k"))
 	    (const_int 16))
-	  (zero_extend:SI (subreg:HI (match_operand:SI 2 "register_operand" "k") 0))))]
+	  (zero_extend:SI (match_operand:HI 2 "register_operand" "k"))))]
   "TARGET_AVX512BW"
   "kunpckwd\t{%2, %1, %0|%0, %1, %2}"
   [(set_attr "mode" "SI")])
@@ -8539,9 +8539,9 @@
   [(set (match_operand:DI 0 "register_operand" "=k")
 	(ior:DI
 	  (ashift:DI
-	    (match_operand:DI 1 "register_operand" "k")
+	    (zero_extend:DI (match_operand:SI 1 "register_operand" "k"))
 	    (const_int 32))
-	  (zero_extend:DI (subreg:SI (match_operand:DI 2 "register_operand" "k") 0))))]
+	  (zero_extend:DI (match_operand:SI 2 "register_operand" "k"))))]
   "TARGET_AVX512BW"
   "kunpckdq\t{%2, %1, %0|%0, %1, %2}"
   [(set_attr "mode" "DI")])
