[ARM] PR 67439: Allow matching of *arm32_movhf when -mrestrict-it is on
	Backport from mainline
	2015-09-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/67439
	* config/arm/arm.md (*arm32_movhf): Remove !arm_restrict_it from
	predicate.  Set predicable_short_it attr to "no".

	PR target/67439
	* gcc.target/arm/pr67439_1.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228039 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2015-09-23  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	Backport from mainline
+	2015-09-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	PR target/67439
+	* gcc.target/arm/pr67439_1.c: New test.
+
 2015-09-23  Matthew Wahab  <matthew.wahab@arm.com>
 
 	Backport from mainline
