PR sanitizer/64906 	* c-ubsan.c (ubsan_instrument_division): Also pre-evaluate OP1.
	* c-c++-common/ubsan/pr64906.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228113 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2015-09-25  Marek Polacek  <polacek@redhat.com>
+
+	PR sanitizer/64906
+	* c-c++-common/ubsan/pr64906.c: New test.
+
 2015-09-23  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	Backport from mainline
