2015-09-25  Tobias Burnus  <burnus@net-b.de>
	* doc/invoke.texi (-fsanitize): Update URLs.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228145 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-25  Tobias Burnus  <burnus@net-b.de>
+
+	* doc/invoke.texi (-fsanitize): Update URLs.
+
 2015-09-24  John David Anglin  <danglin@gcc.gnu.org>
 
 	* config/pa/pa-linux.h (HAVE_sync_compare_and_swapdi): Define.
