2015-09-25  Tobias Burnus  <burnus@net-b.de>
	* doc/invoke.texi (-fsanitize): Update URLs.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_9-branch@228146 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,6 @@
+2015-09-25  Tobias Burnus  <burnus@net-b.de>
+
+	* doc/invoke.texi (-fsanitize): Update URLs.
 2015-09-21  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR middle-end/67619
