2015-09-25  Tobias Burnus  <burnus@net-b.de>
	* doc/invoke.texi (-fsanitize): Minor wording tweak.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228147 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2015-09-25  Tobias Burnus  <burnus@net-b.de>
 
+	* doc/invoke.texi (-fsanitize): Minor wording tweak.
+
+2015-09-25  Tobias Burnus  <burnus@net-b.de>
+
 	* doc/invoke.texi (-fsanitize): Update URLs.
 
 2015-09-24  John David Anglin  <danglin@gcc.gnu.org>
