2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
	PR fortran/67614
	* resolve.c (gfc_resolve_code): Prevent ICE for invalid EXPR_NULL.

2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/67614
	* gfortran.dg/pr67614.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228158 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,5 +1,10 @@
 2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/67614
+	* resolve.c (gfc_resolve_code): Prevent ICE for invalid EXPR_NULL.
+
+2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/67525
 	* parse.c (match_deferred_characteristics): Remove an assert, which
 	allows an invalid SELECT TYPE selector to be detected.
