2015-09-28  Daniel Cederman  <cederman@gaisler.com>
Do not use floating point registers when compiling with -msoft-float for SPARC

__builtin_apply* and __builtin_return accesses the floating point registers on
SPARC even when compiling with -msoft-float.

gcc/
        * config/sparc/sparc.c (sparc_function_value_regno_p): Do not return
        true on %f0 for a target without FPU.
        * config/sparc/sparc.md (untyped_call): Do not save %f0 for a target
        without FPU.
        (untyped_return): Do not load %f0 for a target without FPU.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_9-branch@228186 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2015-09-28  Daniel Cederman  <cederman@gaisler.com>
+
+	* config/sparc/sparc.c (sparc_function_value_regno_p): Do not return
+	true on %f0 for a target without FPU.
+	* config/sparc/sparc.md (untyped_call): Do not save %f0 for a target
+	without FPU.
+	(untyped_return): Do not load %f0 for a target without FPU.
+
 2015-09-25  Tobias Burnus  <burnus@net-b.de>
 
 	* doc/invoke.texi (-fsanitize): Update URLs.
