2015-09-28  Daniel Cederman  <cederman@gaisler.com>
Make muser-mode the default for LEON3

The muser-mode flag causes the CASA instruction for LEON3 to use the
user mode ASI. This is the correct behavior for almost all LEON3 targets.
For this reason it makes sense to make user mode the default.

gcc/
        * config/sparc/sparc.opt: Rename mask from USER_MODE to SV_MODE
          and make it inverse to change default
        * config/sparc/sync.md: Only use supervisor ASI for CASA when in
          supervisor mode
        * doc/invoke.texi: Document change of default


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_9-branch@228187 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2015-09-28  Daniel Cederman  <cederman@gaisler.com>
 
+	* config/sparc/sparc.opt: Rename mask from USER_MODE to SV_MODE
+	  and make it inverse to change default
+	* config/sparc/sync.md: Only use supervisor ASI for CASA when in
+	  supervisor mode
+	* doc/invoke.texi: Document change of default
+
+2015-09-28  Daniel Cederman  <cederman@gaisler.com>
+
 	* config/sparc/sparc.c (sparc_function_value_regno_p): Do not return
 	true on %f0 for a target without FPU.
 	* config/sparc/sparc.md (untyped_call): Do not save %f0 for a target
