2015-09-28  Daniel Cederman  <cederman@gaisler.com>
Use leon3 target for native LEON on Linux. Linux requires LEON version 3 or
above with CASA support.

gcc/
	* config/sparc/driver-sparc.c: map LEON to leon3


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_9-branch@228188 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2015-09-28  Daniel Cederman  <cederman@gaisler.com>
 
+	* config/sparc/driver-sparc.c: map LEON to leon3
+
+2015-09-28  Daniel Cederman  <cederman@gaisler.com>
+
 	* config/sparc/sparc.opt: Rename mask from USER_MODE to SV_MODE
 	  and make it inverse to change default
 	* config/sparc/sync.md: Only use supervisor ASI for CASA when in
