gcc/testsuite/         * gcc.target/i386/avx512vbmi-check.h (main): Fix register         name while checking for AVX-512VBMI presence.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2015-04-28  Kirill Yukhin  <kirill.yukhin@intel.com>
+
+        * gcc.target/i386/avx512vbmi-check.h (main): Fix register
+        name while checking for AVX-512VBMI presence.
+
 2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/67614
