--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2015-09-29  Andrew Pinski  <apinski@cavium.com>    
+
+	* config/aarch64/aarch64.md (prefetch):
+	Change the predicate of operand 0 to register_operand.
+
 2015-09-28  Daniel Hellstrom  <daniel@gaisler.com>
 
 	* config/sparc/t-rtems: Remove -muser-mode. Add ut699, at697f and leon.
