S/390: Add V1TImode to constant pool modes.
2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	    Backport from mainline
	    2015-09-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	    * config/s390/s390.c: Add V1TImode to constant pool modes.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228237 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,13 @@
 2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	Backport from mainline
+	2015-09-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* config/s390/s390.c: Add V1TImode to constant pool modes.
+
+2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	Backport from mainline
 	2015-06-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	* config/s390/vx-builtins.md
