S/390: Don't use vgm for v1ti and v1tf.
gcc/
2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backport from mainline
	2015-09-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/s390.c (s390_contiguous_bitmask_vector_p): Reject if
	the vector element is bigger than 64 bit.

gcc/testsuite
2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backport from mainline
	2015-09-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* gcc.target/s390/vector/vec-genbytemask-1.c: Add check for V1TI
	initialization with a byte mask.  No change expected here.
	* gcc.target/s390/vector/vec-genmask-1.c: Fix whitespace.
	* gcc.target/s390/vector/vec-genmask-2.c: Add check for V1TI
	initialization with contigious bitmask.  Literal pool is expectd
	to be used here.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228239 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,6 +3,14 @@
 	Backport from mainline
 	2015-09-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
+	* config/s390/s390.c (s390_contiguous_bitmask_vector_p): Reject if
+	the vector element is bigger than 64 bit.
+
+2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	Backport from mainline
+	2015-09-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
 	* config/s390/vx-builtins.md ("vec_vmal<mode>", "vec_vmah<mode>")
 	("vec_vmalh<mode>"): Change mode iterator from VI_HW to VI_HW_QHS.
 
