2015-09-29  Vladimir Makarov  <vmakarov@redhat.com>
	Backport from mainline
	2015-07-21  Vladimir Makarov  <vmakarov@redhat.com>

	PR ipa/66424.
	* lra-remat.c (operand_to_remat): Prevent using insns with input
	subregs processed separately by IRA.

2015-09-29  Vladimir Makarov  <vmakarov@redhat.com>

	Backport from mainline
	2015-07-21  Vladimir Makarov  <vmakarov@redhat.com>

	PR ipa/66424.
	* gcc.target/i386/pr66424.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228256 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2015-09-29  Vladimir Makarov  <vmakarov@redhat.com>
+
+	Backport from mainline
+	2015-07-21  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR ipa/66424.
+	* gcc.target/i386/pr66424.c: New.
+
 2015-09-29  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	Backport from mainline
