PR c/67730 	* c-typeck.c (c_finish_return): Use the expansion point location for 	certain "return with value" warnings.
	* gcc.dg/pr67730.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228288 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -6,6 +6,9 @@
 	PR tree-optimization/67690
 	* gcc.dg/torture/pr67690.c: New test.
 
+	PR c/67730
+	* gcc.dg/pr67730.c: New test.
+
 2015-09-29  Vladimir Makarov  <vmakarov@redhat.com>
 
 	Backport from mainline
